# soww_examples

./: CMakeLists.txt  README.md
examples/: barrier.c  big_send.c  biggest_pair_divisor.c  find_all_x_where_x_is_y_min_z.c  histogram.c  longest_sequence.c  median.c  seventeenth_biggest_number.c  smallest_set_summing_to_m.c  sorting.c
openmp-examples/: find_all_x_and_y_st_x_plus_10_is_y.c  master_slaves.c  master_slaves_tasks.c  min_50_max_50.c  second_largest.c  sum_reduction.c  vec_add.c
